discovery_site/static/discovery_site/css/layouts/blog.css
/* ... */
.results_pool_name_number_search {
    color: #666;
    font-size: 1.3em;
    font-family: 'Raleway';
    padding-bottom: 4px;
    display: inline-block;
}

.results_pool_name_number_pool {
    font-size: 1.8em;
    font-weight: 700;
    color: #4A84A3;
    font-family: 'Raleway';
}

.results_pool_name_number_description {
    font-size: 1.8em;
    font-weight: 700;
    line-height: 1em;
    color: #4A84A3;
    font-family: 'Raleway';
}

#number_of_results {
    width: 650px;
    font-size: 1.2em;
    min-height: 20px;
    background-color: ;
    color: #333333;
    font-weight: 600;
    display: block;
    font-family: 'Raleway';
    margin-top: 5px;
}

.matching_your_search {
}

#sam_last_updated {
    width: 240px;
    float: right;
    display: inline;
    text-align: right;
    height: 30px;
    padding-top: 5px;
}

#sam_load {
    display: inline;
}

.sam_style {
    color: #a0692a !important;
}

#your_search_criteria {
    width: 100%;
    min-height: 30px;
    margin-bottom: 5px;
    font-size: .9em;
    margin-top: 7px;
    display: none;
}

.your_search_grey {
    color: #666;
    font-family: 'Raleway';
    font-size: 1.2em;
}

.your_search_blue {
    color: #D60000;
    margin-right: 15px;
    font-family: 'Raleway';
    font-size: 1.2em;
}

.column {
    float: left;
    margin-right: 5%;
    min-width: 14%;
    max-width: 20%;
    display: inline-block;
    padding-bottom: 40px;
    min-height: 200px;
}

.pool_title {
    font-size: 2em;
    color: #222;
    margin-bottom: -0.2em;
    margin: 15px 0 5px 0;
    width: 100;
    background: url(../../images/pool_arrows.png);
    background-repeat: no-repeat;
    background-position: 100px 16px;
}

.number_of_vendors_in_pool {
    margin-top: -8px;
    border-bottom: 1px solid #eeeeee;
    padding-bottom: 4px;
}

.vendor_names {
    font-size: 0.8em;
    color: #777777;
    line-height: 1.3em;
    padding-bottom: 3px;
    margin-bottom: 0;
}

a.pool_link {
}


#custom_page_content .column h2.pool_title a:link {
    color: #3b6f92;
}

#custom_page_content .column h2.pool_title a:visited {
    color: #3b6f92;
}

#custom_page_content .column h2.pool_title a:hover {
    color: #7fc8cd;
    text-decoration: none;
}

#custom_page_content .column h2.pool_title a:active {
    color: #519acd;
}

/* Pool Detail Styles */

img.green_dot {
    padding-top: 3px;
}


.pooldetail {
    margin: 0;
    padding: 0;
    width: 100%;
    float: left;
    margin-top: 20px;
}

.pooldetail table {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;

}

.pooldetail tr:hover td {
    background-color: #F1F1F1;
}


.pooldetail td.unrestricted {
    background-color: #e3e3e3;
    vertical-align: top;
    padding-top: 13%;
    color: #3f3f3f;
}

.pooldetail tr:hover td.unrestricted {
    background-color: #e3e3e3;
}


.pooldetail td.unrestricted {
    font-weight: bold;
}


.pooldetail td {
    vertical-align: middle;
    background-color: #fff;
    border: 1px solid #e5e5e5;
    border-width: 1px 1px 1px 1px;
    text-align: center;
    padding: 10px;
    font-size: .9em;
    font-family: ;
    font-weight: normal;
    color: #666666;
}

.pooldetail tr:last-child td {
    border-width: 1px 1px 1px 1px;
}

.pooldetail tr td:last-child {
    border-width: 1px 1px 1px 1px;
}

.pooldetail tr:last-child td:last-child {
    border-width: 0 1px 1px 1px;
}

.pooldetail tr:first-child td {
    background-color: #4A85A3;
    border: 0 solid #e5e5e5;
    text-align: center;
    border-width: 0 0 1px 1px;
    font-size: 1em;
    font-family: ;
    font-weight: 600;
    color: #fff;
}

.pooldetail tr:first-child:hover td {
    background-color: #4A85A3;
}

.pooldetail tr:first-child td:first-child {
    border-width: 0 0 1px 0;
}

.pooldetail tr:first-child td:last-child {
    border-width: 0 0 1px 1px;
}

#pool_table {
    display: none;
}

#pool_table .h_vendor_name .h_vendor_location .h_naics_results .h_8a .h_hubz .h_sdvo .h_wo .h_vo .h_sdb {
    font-family: 'Raleway' !important;
}

#pool_table .h_vendor_name {
    text-align: left;
    width: 420px;
}

#pool_table .h_naics_results {
    text-align: left;
    width: 160px;
}

#pool_table .vendor_name {
    text-align: left;
}

#pool_table .h_vendor_location {
    text-align: left;
    width: 177px;
}

#pool_table .vendor_location {
    text-align: left;
}

#pool_table .pooldetail .vendor_name tr:hover td {
    background-color: #eeeeee;
}

.pure-checkbox {
    padding-bottom: 3px;
}

.pure-checkbox-enabled {
    padding-bottom: 3px;
    color: #fff;
}

.pure-checkbox-disabled {
    color: #999999;
}


/* Vendor Detail Styles */
#vendor_main_container {
    float: left;
    width: 1100px;
}

#vendor_title_status_container {
    width: 100%;
    min-height: 43px;
    background-color: ;
    margin-top: 10px;
}

.vendor_title {
    font-size: 2em;
    float: left;
    font-weight: 600;
}

.vendor_website {
    float: left;
    margin-left: 10px;
    margin-top: 4px;
    padding-right: 8px;
    padding-top: 10px;
    background: url(../../images/external_link.png);
    background-repeat: no-repeat;
    background-position: 118px 14px;
    height: 35px;
    width: 140px;
    vertical-align: text-bottom;
    color: #83b1d6;
}

.debarred_status {
    display: none;
    font-size: 1.6em;
    float: left;
    margin-left: 10px;
    font-weight: 600;
    color: #d60006;
}

#vendor_admin_container {
    width: 100%;
    margin-top: 0;
    min-height: 200px;
    border-bottom: 1px solid #DDDDDD;
    border-top: 1px solid #DDDDDD;
    padding-top: 30px;
}

#vendor_admin_c1 {
    width: 340px;
    float: left;
    min-height: 90px;
}

#download_data {
    width: 340px;
    min-height: 20px;
    padding-left: 23px;
    background: url(../../images/download_icon.png);
    background-repeat: no-repeat;
    background-position: 0 3px;
    margin-top: 5px;
}

#download_data_results:hover {
    text-decoration: underline;
}

#csv_container {
    float: right;
}
/* ... */

